# operations_on_accounts

./: .gitignore  README.md  pyproject.toml
src/: cnst.py  main.py  utils.py
src/classes/: operation.py
tests/: test_main.py  test_operation.py  test_utils.py
