[tool.poetry]
name = "operations-on-accounts"
version = "0.1.0"
description = ""
authors = ["Vladislav_Poroshin <vld.poroshin@gmail.com>"]
readme = "README.md"
packages = [{include = "operations_on_accounts"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
